--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -14,6 +14,7 @@ body {
   }
 }
 
+/*!
 .carousel-item {
   height: 65vh;
   min-height: 300px;
@@ -22,7 +23,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
+}*/
 
 .portfolio-item {
   margin-bottom: 30px;
